src/objects/FieloAlpha__RewardItem__c.object
<CustomObject>
    <description>Stock of each reward.</description>
    <fields>
        <fullName>FieloAlpha__Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloAlpha__IsCondenser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCondenser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RedemptionItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption Item</label>
        <referenceTo>FieloAlpha__RedemptionItem__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Reward__c</fullName>
        <label>Reward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloAlpha__Reward__c.FieloAlpha__VoucherCreationMode__c</field>
                <operation>notEqual</operation>
                <value>Unlimited</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FieloAlpha__Reward__c</referenceTo>
        <relationshipLabel>Reward Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Status__c</fullName>
        <description>&quot;Available&quot; means the reward can be redeemed.
&quot;Unavailable&quot; means the voucher is already used.
&quot;Canceled&quot; is when the voucher is expired.
&quot;Pending&quot; is when the redemption is closed and the voucher was not used.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reward Item</label>
    <nameField>
        <displayFormat>IT {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>